--- a/reading_list/index.html
+++ b/reading_list/index.html
@@ -30,6 +30,7 @@
         </div>
       </div>
       <input type="submit" value="save"/>
+      <input type="submit" value="delete"/>
     </form>
 
     <h1>Reading List</h1>
