--- a/reading_list/index.html
+++ b/reading_list/index.html
@@ -30,9 +30,8 @@
         </div>
       </div>
       <input type="submit" value="save"/>
-      <input type="submit" value="delete"/>
+      <input type="reset" value="delete"/>
     </form>
-
     <h1>Reading List</h1>
     <div id="reading-list"></div>
   </body>
